Certbot challenge mostly done

--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <exec.mainClass>dk.jersin.quickdns.QuickDns</exec.mainClass>
     </properties>
     
@@ -40,6 +40,13 @@
                 <artifactId>picocli</artifactId>
                 <version>4.7.5</version>
             </dependency> 
+            
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.10.1</version>
+            </dependency>
+            
         </dependencies>
     </dependencyManagement>
 
@@ -49,11 +56,15 @@
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
         </dependency>
-    
         <dependency>
             <groupId>info.picocli</groupId>
             <artifactId>picocli</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+        
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -197,6 +208,17 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.5.1</version>
+                <configuration>
+                    <filters>
+                        <filter>
+                            <artifact>*:*</artifact>
+                            <excludes>
+                                <exclude>META-INF/MANIFEST.MF</exclude>
+                                <exclude>META-INF/versions/9/module-info*</exclude>
+                            </excludes>
+                        </filter>
+                    </filters>                    
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -206,7 +228,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>dk.jersin.quickdns.Main</mainClass>
+                                    <mainClass>dk.jersin.quickdns.MainCommand</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
