--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -1,4 +1,5 @@
 handlers= java.util.logging.ConsoleHandler
-java.util.logging.ConsoleHandler.level = WARNING
+.level = WARNING
+java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format=%5$s %n
