[maven-release-plugin] prepare release quickdns-1.0

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>dk.jersin</groupId>
     <artifactId>quickdns</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>jar</packaging>
     
     <properties>
@@ -291,6 +291,6 @@
         <connection>scm:git:${user.name}@dev.jersin.dk:322/~/prv/quick-dns.git</connection>
         <developerConnection>scm:git:${user.name}@dev.jersin.dk:322/~/prv/quick-dns.git</developerConnection>
         <!--url>https://bitbucket.org/jersin-team/poolscore</url-->
-        <tag>HEAD</tag>
+        <tag>quickdns-1.0</tag>
     </scm>
 </project>
