--- a/pom.xml
+++ b/pom.xml
@@ -288,8 +288,8 @@
         mvn release:perform -Darguments='-Dmaven.test.skip=true'
     -->
     <scm>
-        <connection>scm:git:${user.name}@dev.jersin.dk:322/~/prv/quick-dns.git</connection>
-        <developerConnection>scm:git:${user.name}@dev.jersin.dk:322/~/prv/quick-dns.git</developerConnection>
+        <connection>scm:git:${user.name}@dev.jersin.dk:322:/~/prv/quick-dns.git</connection>
+        <developerConnection>scm:git:${user.name}@dev.jersin.dk:322:/~/prv/quick-dns.git</developerConnection>
         <!--url>https://bitbucket.org/jersin-team/poolscore</url-->
         <tag>HEAD</tag>
     </scm>
